src/eval/snapshots/monkey_language_server__eval__test__bad_mix_infix.snap
---
source: src/eval/test.rs
description: "\nlet x = \"foo\" + 1;\nlet x = true + 1;\nlet x = \"foo\" + true;\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (3,0)->(3,21)),
        ),
    ],
    refs: [
        Pos("x", "(1,4)->(1,5)"),
        Pos("x", "(2,4)->(2,5)"),
        Pos("x", "(3,4)->(3,5)"),
    ],
    scope_range: "(0,0)->(3,21)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: <str> + <int> (1,8)->(1,17)",
    "TypeError: <bool> + <int> (2,8)->(2,16)",
    "TypeError: <str> + <bool> (3,8)->(3,20)",
]
