src/eval/snapshots/monkey_language_server__eval__test__bad_mix_infox.snap
---
source: src/eval/test.rs
description: "\nlet x = \"foo\" + 1;\nlet x = true + 1;\nlet x = \"foo\" + true;\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (3,4)->(3,5)),
        ),
    ],
    refs: [
        Spanned("x", "(1,4)->(1,5)"),
        Spanned("x", "(2,4)->(2,5)"),
        Spanned("x", "(3,4)->(3,5)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Error(UnknownOperator("str", "int", "+"), (1,14)->(1,15)),
    Error(UnknownOperator("bool", "int", "+"), (2,13)->(2,14)),
    Error(UnknownOperator("str", "bool", "+"), (3,14)->(3,15)),
]
