src/eval/snapshots/monkey_language_server__eval__test__bad_type_index.snap
---
source: src/eval/test.rs
description: "let x = 1[1];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (0,0)->(0,13)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,13)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: 'int' object is not subscriptable. (0,8)->(0,9)",
]
