src/eval/snapshots/monkey_language_server__eval__test__basic_func_1.snap
---
source: src/eval/test.rs
description: "let foo = fn() { return 1; };"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "foo",
            Value(Function(0, Int), (0,4)->(0,7), (0,0)->(0,29)),
        ),
    ],
    refs: [
        Pos("foo", "(0,4)->(0,7)"),
    ],
    scope_range: "(0,0)->(0,29)",
    parent_range: None,
    children: [
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,15)->(0,27)",
            parent_range: Some(
                "(0,0)->(0,29)",
            ),
            children: [],
        },
    ],
}

========================

[]
