src/eval/snapshots/monkey_language_server__eval__test__basic_func_call.snap
---
source: src/eval/test.rs
description: "\nlet add = fn(x,y) { return x + y; };\n\nlet x = add(2, 4);\n"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "add",
            Pos(Function(Some(2), Unknown), (1,0)->(1,36)),
        ),
        (
            "x",
            Pos(Unknown, (3,0)->(3,18)),
        ),
    ],
    refs: [
        Pos("add", "(1,4)->(1,7)"),
        Pos("add", "(3,8)->(3,11)"),
        Pos("x", "(3,4)->(3,5)"),
    ],
    scope_range: "(0,0)->(3,18)",
    parent_range: None,
    children: [
        Environment {
            store: [
                (
                    "x",
                    Pos(Unknown, (1,13)->(1,14)),
                ),
                (
                    "y",
                    Pos(Unknown, (1,15)->(1,16)),
                ),
            ],
            refs: [
                Pos("x", "(1,27)->(1,28)"),
                Pos("y", "(1,31)->(1,32)"),
            ],
            scope_range: "(1,18)->(1,34)",
            parent_range: Some(
                "(0,0)->(3,18)",
            ),
            children: [],
        },
    ],
}

========================

[]
