src/eval/snapshots/monkey_language_server__eval__test__bool_minus.snap
---
source: src/eval/test.rs
description: let x = true - true;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,20)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: <bool> - <bool> (0,13)->(0,14)",
]
