src/eval/snapshots/monkey_language_server__eval__test__builtin_first_bad_arg.snap
---
source: src/eval/test.rs
description: let x = first(1);
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Int, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("first", "(0,8)->(0,13)"),
        Spanned("x", "(0,4)->(0,5)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Error(GenericTypeError("unable to get the first of 'int'"), (0,13)->(0,14)),
]
