src/eval/snapshots/monkey_language_server__eval__test__builtin_first_bad_arg_count_0.snap
---
source: src/eval/test.rs
description: let x = first();
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("first", "(0,8)->(0,13)"),
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,16)",
    parent_range: None,
    children: [],
}

========================

[
    Error(MismatchArgs(1, 0), (0,13)->(0,14)),
]
